unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_Driver_Support_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Driver_Support_Capacity__c</fullName>
    <defaultValue>2.3</defaultValue>
    <label>Driver Support Capacity</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>