unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_NR_Volunteer_Fixed_Site_Band_Upper__c.field-meta.xml
<CustomField>
    <fullName>sked_NR_Volunteer_Fixed_Site_Band_Upper__c</fullName>
    <defaultValue>70</defaultValue>
    <label>NR Volunteer Fixed Site Band (Upper)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>