unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_Platelet_Hourly_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Platelet_Hourly_Capacity__c</fullName>
    <defaultValue>1.17</defaultValue>
    <label>Platelet Hourly Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>