unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_Team_Supervisor_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Team_Supervisor_Threshold__c</fullName>
    <label>Team Supervisor Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>