unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_VP_HH_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_VP_HH_Capacity__c</fullName>
    <label>VP/HH Capacity</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>