unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/fields/sked_WB_Hourly_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_WB_Hourly_Capacity__c</fullName>
    <defaultValue>2.1</defaultValue>
    <label>WB Hourly Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>