unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/recordTypes/sked_Fixed_Site.recordType-meta.xml
<RecordType>
    <fullName>sked_Fixed_Site</fullName>
    <active>true</active>
    <description>Used for fixed site of drives</description>
    <label>Fixed Site</label>
</RecordType>