unpackaged/main/default/objects/sked_Staffing_Decision_Matrix__c/recordTypes/sked_Mobile.recordType-meta.xml
<RecordType>
    <fullName>sked_Mobile</fullName>
    <active>true</active>
    <description>Used for mobile type of drives</description>
    <label>Mobile</label>
</RecordType>